# GraSP-M

./: CMakeLists.txt  README.md  graph_analysis.sh  run.sh  test_graph.daglist
benchmark/: CMakeLists.txt  add.cpp  add_edges.cpp  add_vertices.cpp  amortzdPnS.cpp  amortzdpns.cpp  bfs.cpp  camortzdpns.cpp  compaction.cpp  compaction_parallel.cpp  cpact.cpp  cpermsh.cpp  data_change.cpp  delete.cpp  delete_wires.cpp  e2e_emgraph.cpp  equality.cpp  gather.cpp  graphutils.h  groupindex.cpp  groupindex_parallel.cpp  grouppropagate.cpp  grouppropagate_parallel.cpp  initialization_emgraph.cpp  initialization_graphiti.cpp  initialization_grasp.cpp  mpa_emgraph.cpp  mpa_graphiti.cpp  mult.cpp  permAndSh.cpp  permsh.cpp  propagate.cpp  reconstruction.cpp  rewire.cpp  shuffle.cpp  sort.cpp  test_primitives.cpp  utils.cpp  utils.h  vector_reconstruction.cpp
src/emgraph/: preproc.h
src/graphdb/: offline_evaluator.cpp  offline_evaluator.h  online_evaluator.h  online_evaluator_load_balanced.cpp  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.cpp  sharing.h
src/utils/: circuit.cpp  circuit.h
